--- a/reminder-app/package.json
+++ b/reminder-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^3.0.2",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
