--- a/reminder-app/package.json
+++ b/reminder-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^3.0.2",
     "next": "13.0.0",
+    "next-auth": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
