--- a/reminder-app/package.json
+++ b/reminder-app/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@microsoft/microsoft-graph-client": "^3.0.2",
+    "@mui/material": "^5.10.13",
     "next": "13.0.0",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
